--- a/Taller2/app/src/main/res/values/strings.xml
+++ b/Taller2/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">PermisosMapas</string>
     <string name="title_activity_maps">Map</string>
+    <string name="direcciones_llave">AIzaSyA4_sP2aOhCo5fC3zPvChnTYSL74_cufLI</string>
 </resources>
